--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   path_provider: ^2.1.1
   dio: ^5.4.0
   path: ^1.8.3 
+  video_player: ^2.7.0
+
 
 flutter:
   uses-material-design: true
