--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
   dio: ^5.4.0
   path: ^1.8.3 
   video_player: ^2.7.0
-
-
+  chewie: ^1.7.4
+  socket_io_client: ^2.0.0
+  intl: ^0.18.1 
+  
 flutter:
   uses-material-design: true
 
